feat(doc): #2994.284 add pci refs to some rules
- Added PCI DSS references to R181, R273, R041, R118
and R262
- Updated R273, R041, R118, R262 and R186 keywords


Former-commit-id: 8fcd79dd361d704611146252fd429f008a05f3b8

--- a/content/pages/rules/data/181/index.adoc
+++ b/content/pages/rules/data/181/index.adoc
@@ -204,3 +204,7 @@ Ensure wireless networks transmitting cardholder data or connected to the
 cardholder data environment,
 use industry best practices to implement strong encryption for authentication
 and transmission.
+
+. [[r28]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 4.2]
+Never send unprotected **PAN**s by end-user messaging technologies
+(for example, e-mail, instant messaging, *SMS*, chat, etc.).
