--- a/content/pages/rules/files/041/index.adoc
+++ b/content/pages/rules/files/041/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/041/
 :category: files
 :description: This requirement establishes that the files transferred or uploaded to the system must be scanned for possible malicious code.
-:keywords: Validate, File, Code, ASVS, CWE, Malicious, Rules, Ethical Hacking, Pentesting
+:keywords: Validate, File, Code, ASVS, CWE, Malicious, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R041. Scan files for malicious code
@@ -38,3 +38,7 @@ connections.
 V12.4 File Storage Requirements.(12.4.2)]
 Verify that files obtained from untrusted sources are scanned by antivirus
 scanners to prevent upload of known malicious content.
+
+. [[r5]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 5.1.1]
+Ensure that anti-virus programs are capable of detecting, removing, and
+protecting against all known types of malicious software.
