feat(doc): #3596.1 add pci refs to some rules
- Added PCI DSS references to R361, R145, R176, R154, R180
- Added CWE reference to R154, R180
- Fixed some typos


Former-commit-id: a5b41f35b136e4f45e55bb8b2fe45fca2cd7fbe8

--- a/content/pages/rules/cryptography/145/index.adoc
+++ b/content/pages/rules/cryptography/145/index.adoc
@@ -127,3 +127,8 @@ cryptographic keys including secure cryptographic key distribution.
 . [[r20]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 3.6.3]
 Fully document and implement all key-management processes and procedures for
 cryptographic keys including secure cryptographic key storage.
+
+. [[r21]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 3.6.7]
+Fully document and implement all key-management processes and procedures for
+cryptographic keys including prevention of unauthorized substitution of
+cryptographic keys.
