--- a/content/blog/understand-program-semantics/index.adoc
+++ b/content/blog/understand-program-semantics/index.adoc
@@ -12,7 +12,7 @@
 :name: Rafael Ballestas
 :about1: Mathematician
 :about2: with an itch for CS
-:source: https://unsplash.com/photos/r8H8K3w9AzA
+:source: https://unsplash.com/photos/j3dxI7CNYL0
 
 
 = Understanding Program Semantics
